test/CheckError/Datatype/CopyNonCopyableDatatype.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// Not implicitly copyable.
}

datatype TestDatatype(TestClass object);

TestDatatype doImplicitCopy(TestDatatype value) {
	// CHECK: .loci:12:2: error: Unable to copy type 'TestDatatype' because it doesn't have a valid 'implicitcopy' method, in cast from type ref<TestDatatype>(TestDatatype&) to type TestDatatype.
	return value;
}

// CHECK: 1 error generated.
